--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -2575,6 +2575,7 @@ fieldset:disabled a.btn {
   color: #fff;
   background-color: #007bff;
   border-color: #007bff;
+  margin: 1px;
 }
 
 .btn-primary:hover {
