--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1344,7 +1344,6 @@ a.text-dark:hover, a.text-dark:focus {
   padding-top: 80px;
   padding-bottom: 80px;
   color: #898798;
-  overflow: hidden;
 }
 
 .page-banner {
@@ -1367,7 +1366,8 @@ a.text-dark:hover, a.text-dark:focus {
   margin: 0 auto;
 }
 
-.page-banner.home-banner .btn-scroll {
+.btn-scroll {
+  z-index: 7;
   position: absolute;
   bottom: -14px;
   left: 0;
@@ -1384,7 +1384,7 @@ a.text-dark:hover, a.text-dark:focus {
   transition: all .2s ease;
 }
 
-.page-banner.home-banner .btn-scroll:hover {
+.btn-scroll:hover {
   text-decoration: none;
   background-color: #6C55F9;
   color: #fff;
@@ -1688,10 +1688,21 @@ a.text-dark:hover, a.text-dark:focus {
   width: auto;
   height: 100%;
 }
-
 .card-blog .body {
   padding: 20px;
 }
+
+
+@media (min-width: 992px){
+  .card-blog .body {
+  height: 380px;
+}
+
+.card-blog .body p {
+  height: 250px;
+}
+}
+
 
 .card-blog .post-title a {
   color: #645F88;
